# sandtray-log-analysis

./: CMakeLists.txt  README.md
src/: helperFuncs.cpp  helperFuncs.h  sandtrayLogAnalysis.cpp
